recipe description truncating issue

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -112,8 +112,11 @@ body {
   width: 100%;
   margin-top: 15px;
 }
-.container-cards {
+.wrapper {
   margin-bottom: -35px;
-  margin-top: 35px;
+  margin-top: 30px;
 }
 
+.card-text{
+  min-height: 100px;
+}
